<resources>
	<string name="app_name">Chibimo</string>
	<string name="title_activity_settings">SettingsActivity</string>
	<string name="settings">Settings</string>
	<string name="not_set">Not set</string>
	<string name="loading">Loading…</string>
	<string name="connecting">Connecting to emo…</string>
	<string name="connected">Connected!</string>
	<string name="connection_error">Connection error: %s</string>
	<string name="play_error">Could not play song: %s</string>
	<string name="play">Play</string>
	<string name="next">Next</string>
	<string name="repeat">Repeat</string>
	<string name="stop">Stop</string>
	<string name="play_song_directly">Play song directly</string>
	<string name="add_song_to_queue">Add song to queue</string>
	<string name="add_songs_random">Add songs in random order</string>
	<string name="syncOnLaunch">Resync on launch</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="local_music_directory">Local music directory</string>
	<string name="emo_url">emo URL</string>
	<string name="playing">Playing %s</string>
	<string name="long_tap_action">Long tap action</string>
	<string name="added_song">Added %s</string>
	<string name="emo_error">Emo error: %s</string>
	<string name="imported_songs">Imported %d songs</string>
	<string name="added_songs">Added %d songs</string>
	<string name="resync_now">Resync now</string>
	<string name="help">Help</string>
	<string name="repeated_song">Repeated %s</string>
	<string name="no_music_dir">No music directory configured</string>

	<string name="welcome_to_chibimo">Welcome to chibimo!</string>
	<string name="help_play_pause">Play/Pause current song</string>
	<string name="help_next">Go to next song</string>
	<string name="help_repeat">Repeat current song</string>
	<string name="help_stop">Stop playback</string>
	<string name="help_resync">Menu → Resync now to synchronize the song database with the configured emo server
	</string>
	<string name="help_play">Short tap on song: Play now</string>
	<string name="help_add_song">Long tap on song: Add to queue</string>
	<string name="help_add_folder">Long tap on folder: Add all songs inside to queue</string>
	<string name="help_tap_switch">You can switch these function in the Settings menu</string>
	<string name="help_configuration">To use chibimo, a local music directory and an emo server must be configured. This
		is done via the Settings menu. Please select a folder containing your music files, then enter the address of
		your emo server in the form \"IP:Port\" or \"Hostname:Port\"
	</string>
	<string name="help_offline">Chibimo works fully offline, but will sync your song statistics with emo on every
		startup (if enabled) or by manually selecting \"Resync now\".
	</string>
	<string name="help_offline2">If chibimo synced to emo at least once, it can be used offline indefinitely.</string>
	<string name="help_warning">Make sure not to connect to a different type of server, since its protocol could be
		falsely interpreted as emo control commands and corrupt your local database.
	</string>
</resources>