<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.HelpActivity">

	<ScrollView
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" android:layout_width="0dp" android:layout_height="0dp"
		android:importantForAccessibility="no">
		<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
					  android:orientation="vertical"
					  android:layout_marginTop="2dp" android:layout_margin="8dp">
			<TextView
				android:text="@string/welcome_to_chibimo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="24sp"
				android:textAlignment="center"/>
			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_marginTop="4dp" android:background="@android:color/darker_gray"/>
			<TextView
				android:text="@string/help_play_pause"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				app:drawableStartCompat="@drawable/ic_baseline_play_arrow_24" android:layout_marginTop="4dp"/>
			<TextView
				android:text="@string/help_next"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				app:drawableStartCompat="@drawable/ic_baseline_skip_next_24" android:layout_marginTop="4dp"/>
			<TextView
				android:text="@string/help_repeat"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				app:drawableStartCompat="@drawable/ic_baseline_repeat_one_24" android:layout_marginTop="4dp"/>
			<TextView
				android:text="@string/help_stop"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				app:drawableStartCompat="@drawable/ic_baseline_stop_24" android:layout_marginTop="4dp"/>
			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_marginTop="4dp" android:background="@android:color/darker_gray"/>
			<TextView
				android:text="@string/help_resync"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				android:layout_marginTop="4dp"/>
			<TextView
				android:text="@string/help_play"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				android:layout_marginTop="4dp"/>
			<TextView
				android:text="@string/help_add_song"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				android:layout_marginTop="4dp"/>
			<TextView
				android:text="@string/help_add_folder"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				android:layout_marginTop="4dp"/>
			<TextView
				android:text="@string/help_tap_switch"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				android:layout_marginTop="4dp"/>
			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_marginTop="4dp" android:background="@android:color/darker_gray"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				android:layout_marginTop="4dp"
				android:text="@string/help_configuration"/>
			<Button
				android:text="@string/settings"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:id="@+id/btnOpenSettings"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				android:layout_marginTop="4dp"
				android:text="@string/help_offline"
			/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				android:layout_marginTop="4dp"
				android:text="@string/help_offline2"
			/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:textColor="@color/black" android:textSize="16sp"
				android:layout_marginTop="4dp"
				android:text="@string/help_warning"
			/>
		</LinearLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>